src/test/deca/syntax/parser/valid/class_int.deca
// Name a class as a type, correct syntaxically not contextually

class int {
    
}