src/test/deca/syntax/parser/invalid/class_definition_with_number.deca
// Parser test, class with a number as a name declared

class 145 {
    
}